<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.setup.FinalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/buttonImageTint" />

        <TextView
            android:id="@+id/createAccountHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_semibold"
            android:text="@string/create_account"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:layout_constraintVertical_bias="0.545" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_question"
            android:fontFamily="@font/notosans_bold"
            android:textSize="20sp"
            android:textColor="@color/textColor"/>

        <EditText
            android:id="@+id/nameEntryField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            android:background="@color/designatedField"
            android:ems="10"
            android:inputType="text"
            android:fontFamily="@font/notosans_medium"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:text="@string/sample_name" />

        <TextView
            android:id="@+id/infoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_text"
            android:fontFamily="@font/notosans_medium"
            android:textSize="13sp"
            android:textColor="@color/textColor"/>

        <TextView
            android:id="@+id/requiredTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/required"
            android:textSize="11sp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/notosans_semibold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@color/designatedField"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_medium"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:paddingStart="4dp"
            android:paddingEnd="2dp"
            android:textColor="@color/textColor"
            android:text="@string/term_sheet_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/termsOfUseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/notosans_semibold"
                android:textColor="@color/buttonColor"
                android:text="@string/terms_of_use_btn" />

            <TextView
                android:id="@+id/privacyPolicyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_semibold"
                android:textColor="@color/buttonColor"
                android:text="@string/privacy_policy_btn4" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="42dp"
        android:text="@string/create_account"
        android:textColor="@color/textColorSecondary"
        android:fontFamily="@font/notosans_medium"
        android:textSize="17sp"
        android:backgroundTint="@color/buttonColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>