<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.authentication.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/buttonImageTint" />

        <ImageView
            android:id="@+id/brandLogo"
            android:layout_width="168dp"
            android:layout_height="38dp"
            android:contentDescription="@string/brand_logo"
            android:src="@drawable/spotify_logo"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.349"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/signInHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/textColor"
            android:gravity="center"
            android:fontFamily="@font/notosans_bold"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/supportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/notosans_medium"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/support_text" />

        <EditText
            android:id="@+id/emailEntryField"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/notosans_regular"
            android:textSize="18sp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="text"
            android:background="@drawable/custom_input_field"
            android:hint="@string/username_field"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/passwordEntryField"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints="password"
            android:fontFamily="@font/notosans_regular"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            android:inputType="text"
            android:background="@drawable/custom_input_field"
            android:ems="10"
            android:hint="@string/password"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/recoverPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_regular"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:gravity="end"
            android:text="@string/password_recovery" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/buttonColor"
            android:fontFamily="@font/notosans_bold"
            android:textSize="18sp"
            android:layout_marginTop="32dp"
            android:text="@string/sign_in" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <View
                android:id="@+id/line_left"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/horizontalRuler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewOR"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/textViewOR"/>

            <TextView
                android:id="@+id/textViewOR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line_left"
                app:layout_constraintEnd_toStartOf="@+id/line_right"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <View
                android:id="@+id/line_right"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/horizontalRuler"
                app:layout_constraintStart_toEndOf="@+id/textViewOR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewOR"
                app:layout_constraintBottom_toBottomOf="@+id/textViewOR"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/googleLoginButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/google_login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/google_logo" />

            <ImageView
                android:id="@+id/appleLoginButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="72dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/apple_login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/googleLoginButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/apple_logo"
                app:tint="@color/logoTint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/registerNowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="82dp"
            android:fontFamily="@font/notosans_semibold"
            android:textSize="17sp"
            android:text="@string/not_a_member_register_now" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>