<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.setup.DobActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/buttonImageTint" />

        <TextView
            android:id="@+id/createAccountHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosans_semibold"
            android:text="@string/create_account"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:layout_constraintVertical_bias="0.545" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dateOfBirthTitle"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/dob_question"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <LinearLayout
        android:id="@+id/datePickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateOfBirthTitle">

        <NumberPicker
            android:id="@+id/monthPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"/>

        <NumberPicker
            android:id="@+id/dayPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"/>

        <NumberPicker
            android:id="@+id/yearPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/goToNext"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/next"
        android:textColor="@color/textColorSecondary"
        android:fontFamily="@font/notosans_medium"
        android:textSize="17sp"
        android:backgroundTint="@color/buttonColorSecondary"
        app:layout_constraintEnd_toEndOf="@+id/datePickerLayout"
        app:layout_constraintStart_toStartOf="@+id/datePickerLayout"
        app:layout_constraintTop_toBottomOf="@+id/datePickerLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
